Added character selection and change in background of selected characters

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "xmemory": "cpp"
+        "xmemory": "cpp",
+        "set": "cpp"
     }
 }
